<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/FirstFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

   <TextView
       android:id="@+id/nameOfFrame1"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toTopOf="@id/textInputLayout1"
       android:text="@string/frame1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

   <com.google.android.material.textfield.TextInputLayout
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/nameOfFrame1"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toTopOf="@id/textInputLayout2"
       android:id="@+id/textInputLayout1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/edit1"
          android:hint="@string/input1"
          tools:layout_editor_absoluteX="0dp"
          tools:layout_editor_absoluteY="56dp" />

   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/textInputLayout1"
       app:layout_constraintEnd_toEndOf="parent"
       android:id="@+id/textInputLayout2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/edit2"
          android:hint="@string/input2"
          tools:layout_editor_absoluteX="0dp"
          tools:layout_editor_absoluteY="56dp" />

   </com.google.android.material.textfield.TextInputLayout>

   <Button
       android:id="@+id/changeFragmentButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="48dp"
       android:text="@string/changeFragment"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>